[package]
name = "xtoolbox"
version = "0.1.0"
authors = ["andy <x7c7v7i87@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid =  { version = "1.0.0", features = ["v4"] }
rand = "0.8.5"
rust-crypto = "0.2.36"